2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* INSTALL (Particular Systems): Add recommendations for AIX 3.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (MAINTAINERCLEANFILES): Remove variable.
	(EXTRA_DIST): Incorporate its contents.

2001-03-16  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Postprocess tests/Makefile to work around an
	inconsistency in automake-1.4: EXTRA_PROGRAMS is not treated like
	bin_PROGRAMS.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add AC_REPLACE_FUNCS(strcasecmp). Needed for EMX.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Use AM_FUNC_GETLINE instead of
	AC_REPLACE_FUNCS(getline). Needed for HP-UX 10.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Pass 'need-ngettext' to AM_GNU_GETTEXT.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add en@quot and en@boldquot.

2001-03-10  Bruno Haible  <haible@clisp.cons.org>

	* INSTALL: New section "Particular Systems".

	* configure.in: Postprocess Makefile to work around another
	automake-1.4 bug: on FreeBSD, shell commands are run with "set -e".

	* configure.in: Postprocess misc/Makefile to work around another
	automake-1.4 bug: if @EMACS@ = no, $(lispdir) is empty.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* os2/*: EMX support.
	From Jun Sawataishi <jsawa@attglobal.net>.
	* Makefile.am (EXTRA_DIST): Add these files.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* config.guess, config.sub: Update to GNU version 2001-03-06.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* djgpp/*: DJGPP support.
	From Juan Manuel Guerrero <st001906@hrz1.hrz.tu-darmstadt.de>.
	* Makefile.am (EXTRA_DIST): Add these files.
	(MAINTAINERCLEANFILES): New variable.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (RELEASE_DATE): New variable.
	Create intl/ChangeLog.inst.

2001-03-03  Bruno Haible  <haible@clisp.cons.org>
